--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  background-color: purple;
+  background-color: rgb(138, 85, 254);
   color: whitesmoke;
   position: sticky;
   top: 0;
